[project]
name = "upbit-bot"
version = "0.1.0"
description = "Upbit 자동매매 시스템"
authors = [{name = "AutoGPT"}]
readme = "README.MD"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pandas>=2.2.0",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
